core/testing/snapshots/errors/runtime/index_out_of_bounds.snap
### TITLE ###
Index out of bounds
### INPUT ###
x = [1, 2, 3]
print(x[10])
### STDERR ###
error[RAD20029]: Index out of bounds: 10 (length 3)
  --> <script>:2:9
  |
1 | x = [1, 2, 3]
2 | print(x[10])
  |         ^^
  |
   = info: rad explain RAD20029


### EXIT ###
1
